--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
-
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+ul{list-style: none}
 /*
 	Photon by HTML5 UP
 	html5up.net | @ajlkn
@@ -30,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;}
 
 body {
-	line-height: 1;
+	font-family: 'Jua', sans-serif !important;
 }
 
 ol, ul {
@@ -79,7 +80,7 @@ input, select, textarea {
 	}
 
 	*, *:before, *:after {
-		box-sizing: inherit;
+		
 	}
 
 	body {
@@ -134,7 +135,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #555;
+		color: #000;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 	}
@@ -774,6 +775,8 @@ input, select, textarea {
 							padding-top: 4em;
 						}
 
+						
+
 		}
 
 		@media screen and (max-width: 1140px) {
@@ -1263,6 +1266,7 @@ input, select, textarea {
 						.row.gtr-200.gtr-uniform > * {
 							padding-top: 4em;
 						}
+            
 
 		}
 
@@ -2366,7 +2370,7 @@ input, select, textarea {
 
 		.image img {
 			border-radius: 4px;
-			display: block;
+			display: inline-block;
 		}
 
 		.image.left {
@@ -2393,12 +2397,10 @@ input, select, textarea {
 			display: block;
 			margin: 0 0 2em 0;
 			width: 100%;
-            height: 316.44px
 		}
 
 			.image.fit img {
 				width: 100%;
-                height: 316.44px
 			}
 
 
@@ -2423,6 +2425,7 @@ input, select, textarea {
 
 		ul li {
 			padding-left: 0.5em;
+            float: left
 		}
 
 		ul.alt {
@@ -2849,6 +2852,11 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 			background-size: auto,							cover;
 		}
 
+.picture{background-image: url(../../images/bottomimg.jpg);background-size: 100% !important;
+    background-repeat: repeat-x;
+    background-position: center center;}
+
+
 			.main.style2 a {
 				border-bottom-color: rgba(255, 255, 255, 0.5);
 			}
@@ -2932,16 +2940,17 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 /* Header */
 
 	#header {
-		padding: 9em 0 9em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed;
-		background-image: url(../../images/mainimg.jpg);
-		background-position: center -160px;
-		overflow: hidden;
-		position: relative;
-		text-align: center;
-        height: 600px
+    width: 100%;
+    color: rgba(255, 255, 255, 0.75);
+    background-attachment: fixed;
+    background-image: url(../../images/mainimg_fin_01.jpg);
+    background-position: 0px -100px;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    background-repeat: no-repeat;
+	background-size: 100%;
+	padding-top:calc(870 / 1894 * 100% )
 	}
 
 		#header a {
@@ -3129,17 +3138,39 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 		opacity: 1;
 	}
 
+
+
+
+.space{clear: both}
+.skill_box{width: 100%; height: 250px; position: relative}
+.skill{float: left }
+.skill:nth-child(1){padding-left: 170px}
+.skill:nth-child(2){padding-left: 50px}
+.skill:nth-child(3){padding-left: 50px}
+.skill:nth-child(4){padding-left: 50px}
+
+ul{list-style: none}
+.skill>li{padding-top: 10px}
+.skill>li:nth-child(1){width: 430px; text-align: center}
+.skill>li:nth-child(2){width: 140px; text-align: center}
+.skill>li:nth-child(3){width: 450px; text-align: center}
+.skill>li:nth-child(4){width: 130px; text-align: center}
+
+
+
+
+
+
 /* Footer */
 
 	#footer {
-		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
+		height: 80px;
+		background-color: gray;
 		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
+    
 	}
 
 		#footer a {
@@ -3247,12 +3278,24 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 					padding: 0;
 				}
 
+
+
+
+.contact{color: #000}
+
+
+
+
+
+
+
+
+
 /* XLarge */
 
 	@media screen and (max-width: 1680px) {
 
 		/* Basic */
-
 			body, input, select, textarea {
 				font-size: 14pt;
 			}
@@ -3260,7 +3303,6 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 		/* Header */
 
 			#header {
-				padding: 6em 0 6em 0 ;
 			}
 
 	}
@@ -3278,6 +3320,7 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 			h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
 				display: none;
 			}
+        
 
 		/* List */
 
@@ -3290,6 +3333,7 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 					line-height: 8em;
 					width: 8em;
 				}
+        skill{display: none}
 
 		/* Main */
 
@@ -3304,7 +3348,6 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 		/* Header */
 
 			#header {
-				padding: 5em 0 5em 0 ;
 				background-attachment: scroll;
 			}
 
@@ -3324,7 +3367,16 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 /* Medium */
 
 	@media screen and (max-width: 980px) {
-
+        .image.fit img {
+    width: 50%;}
+        
+#header{width: 100%; height: 0; padding-top: calc(870 / 981 * 100% ); background-image: url(../../images/mainimg_ban2_02.jpg); }
+        
+div.skill{display: none;}
+ ul.skill{display: none;}
+        
+        .skill2{ background-image: url(../../images/skillset.png); height: 183px; background-repeat: no-repeat; margin-left: 30px}
+    
 		/* List */
 
 			ul.major-icons li {
@@ -3332,10 +3384,11 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 			}
 
 				ul.major-icons li .icon {
-					height: 7em;
+					
 					line-height: 7em;
-					width: 7em;
+					
 				}
+        
 
 		/* Main */
 
@@ -3346,7 +3399,7 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 		/* Header */
 
 			#header {
-				padding: 8em 3em 8em 3em ;
+				width: 100%; height: 0px; background-position: 0px 0; margin: 0 auto
 			}
 
 		/* Footer */
@@ -3354,6 +3407,7 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 			#footer {
 				padding: 5em 3em 5em 3em ;
 			}
+        .picture{width: 100% }
 
 		/* One */
 
@@ -3398,17 +3452,17 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 		/* List */
 
 			ul.major-icons li {
-				padding: 1.5em;
+				padding: 1em;
 			}
 
 				ul.major-icons li .icon {
-					height: 5em;
-					line-height: 5em;
-					width: 5em;
+					height: 7.5em;
+					line-height: 7.5em;
+					width: 7.5em;
 				}
 
 					ul.major-icons li .icon:before {
-						font-size: 42px;
+						font-size: 60px;
 					}
 
 		/* Icon */
@@ -3437,7 +3491,6 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 		/* Header */
 
 			#header {
-				padding: 4em 3em 4em 3em ;
 			}
 
 				#header .actions {
@@ -3473,9 +3526,7 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 
 		/* Header */
 
-			#header {
-				padding: 4em 2em 4em 2em ;
-			}
+			
 
 				#header br {
 					display: none;
@@ -3522,9 +3573,7 @@ ul.major-icons li>p{padding-left: 13em; text-align: left;padding-top: 40px; colo
 
 		/* Header */
 
-			#header {
-				padding: 3em 1em 3em 1em ;
-			}
+			
 
 		/* Footer */
 
